--- a/processing_text.ipynb
+++ b/processing_text.ipynb
@@ -35,7 +35,7 @@
     "def get_data(file):\n",
     "    \"\"\"Opens given file and returns a list in which\n",
     "    each value is a string formed by lines in the\n",
-    "    transcrip of parliamentary debates.\n",
+    "transcript of parliamentary debates.\n",
     "    \"\"\"\n",
     "\n",
     "    data = []\n",
@@ -149,7 +149,7 @@
     "            elif i < nr_new_interv - 1:\n",
     "\n",
     "                beg_current_interv = max(local_interv[0].find(': —'), 0) + max(local_interv[0].find(': -'), 0)\n",
-    "                # I sum the beg_current_interv because mu search starts only after beg_current_interv.\n",
+    "                # I sum the beg_current_interv because my search starts only after beg_current_interv.\n",
     "                beg_following_intervs = max(local_interv[0][beg_current_interv + 3 : ].find(': —'), 0) \\\n",
     "                    + max(local_interv[0][beg_current_interv + 3 : ].find(': -'), 0) + beg_current_interv\n",
     "\n",
