--- a/processing_text.ipynb
+++ b/processing_text.ipynb
@@ -186,8 +186,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aqui, eu tento corrigir classify_text, para que \n",
-    "# nao seja tao strict a encontrar os oradores,\n",
+    "# Here, I try to correct the classify_text, so that is \n",
+    "# not as strict in finding the speakers.\n",
     "# (substituir interv[0][0:5] por \"autor\" in interv[0][:beg])\n",
     "\n",
     "\n",
@@ -264,7 +264,7 @@
     "        \n",
     "        elif \"Presidente\" in interv[0][0 : intervention_start] or \\\n",
     "            \"Secretári\" in interv[0][0 : intervention_start]:\n",
-    "            # Aqui, quero também impedir a progressão do tracker quando não é novo orador.\n",
+    "            # Here, I stop the progression of the tracker when there is not a new speaker.\n",
     "            try:\n",
     "                if (\" a palavra\" in interv[0] or \", a palavra\" in interv[0]) and \"Orador\" not in lst[index + 1][0]:\n",
     "                    local_orador_tracker = index\n",
@@ -278,11 +278,11 @@
     "                    pass            \n",
     "    \n",
     "\n",
-    "        # Se for a oradora, ir ver a political party ao início da declaraçao.\n",
+    "        # If speaker, keep the political party from the beginning of the intervention.\n",
     "        elif \"Orador\" in interv[0][0 : intervention_start]:\n",
     "            political_party = local_party_tracker[local_orador_tracker + 1]\n",
     "            \n",
-    "            # Por vezes, são \"Vozes\" que se seguem.\n",
+    "            # I account for the possibility that \"Vozes\" interrupt speech.\n",
     "            if political_party == '' and (\"Vozes\" in lst[local_orador_tracker + 1][0] or \\\n",
     "                \"Protestos\" in lst[local_orador_tracker + 1][0]):\n",
     "                if \"Vozes\" in lst[local_orador_tracker + 2][0]  or \"Protestos\" in lst[local_orador_tracker + 2][0]:\n",
@@ -293,7 +293,7 @@
     "                else:\n",
     "                    political_party = local_party_tracker[local_orador_tracker + 2]\n",
     "\n",
-    "            # Se ainda estiver vazio, será porque o orador se apresentou anteriormente.\n",
+    "            # If still empty, that is because speaker was presented before.\n",
     "            if political_party == '' and \"Orador\" in lst[local_orador_tracker + 1][0] \\\n",
     "                    and \"Presidente\" in lst[local_orador_tracker - 1]:\n",
     "                political_party = local_party_tracker[local_orador_tracker - 1]\n",
@@ -351,22 +351,6 @@
     "    \n",
     "    return classified_session"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f4cfd9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "362ebb83",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -428,14 +412,6 @@
     "    \n",
     "    return date"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a60d24f8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
