--- a/processing_text.ipynb
+++ b/processing_text.ipynb
@@ -299,7 +299,7 @@
     "                political_party = local_party_tracker[local_orador_tracker - 1]\n",
     "\n",
     "\n",
-    "            # Here, I just correct for common mistakes:\n",
+    "            # Here, I just correct for common typos:\n",
     "            corrected_political_party = political_parties.get(political_party, political_party)\n",
     "            classified_speech[corrected_political_party].append(interv[0][intervention_start:])\n",
     "\n",
@@ -309,7 +309,7 @@
     "            political_party_end = interv[0].find(')')        \n",
     "            political_party = interv[0][political_party_start + 1 : political_party_end]\n",
     "            \n",
-    "            # Here, I just correct for common mistakes:\n",
+    "            # Here, I just correct for common typos:\n",
     "            corrected_political_party = political_parties.get(political_party, political_party)\n",
     "            local_party_tracker[index] = corrected_political_party\n",
     "\n",
@@ -321,14 +321,6 @@
     "        \n",
     "    return classified_speech"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "515af0ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
