--- a/quick_descript.ipynb
+++ b/quick_descript.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nThis module conducts LDA on lists of words.\\n'"
+       "'\\nThis module takes the dataset and tokenizes the speech to prepare it for analysis.\\n'"
       ]
      },
      "execution_count": 1,
@@ -19,7 +19,7 @@
    ],
    "source": [
     "'''\n",
-    "This module conducts LDA on lists of words.\n",
+    "This module takes the dataset and tokenizes the speech to prepare it for analysis.\n",
     "'''"
    ]
   },
