--- a/tokenize_text.ipynb
+++ b/tokenize_text.ipynb
@@ -184,21 +184,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cleaning the dataframe generally.\n",
+    "# Implementing the functions specified above.\n",
     "\n",
     "clean_parties = get_clean_parties(speeches)\n",
     "\n",
     "clean_dataframe = get_clean_dataframe(speeches)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "d02fb963",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Future: save clean_dataframe"
    ]
   },
   {
