--- a/tokenize_text.ipynb
+++ b/tokenize_text.ipynb
@@ -316,24 +316,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a8c542ca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb2561ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2011.06.20 2015.11.26"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 103,
    "id": "9c1b75cd",
    "metadata": {},
@@ -444,7 +426,7 @@
     }
    ],
    "source": [
-    "# Finally, I take a provisional clean dataframe and remove interventions from PAN and nao inscritos\n",
+    "# Finally, I take a provisional clean dataframe and remove interventions from PAN and "nao inscritos"\n",
     "\n",
     "\n",
     "file_path = os.path.join(directory_save, 'clean_dataframe.json')\n",
