--- a/tokenize_text.ipynb
+++ b/tokenize_text.ipynb
@@ -426,7 +426,7 @@
     }
    ],
    "source": [
-    "# Finally, I take a provisional clean dataframe and remove interventions from PAN and "nao inscritos"\n",
+    "# Finally, I take a provisional clean dataframe and remove interventions from PAN and nao inscritos\n",
     "\n",
     "\n",
     "file_path = os.path.join(directory_save, 'clean_dataframe.json')\n",
