--- a/tokenize_text.ipynb
+++ b/tokenize_text.ipynb
@@ -530,11 +530,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d50fb133",
+   "execution_count": 109,
+   "id": "0e254cdc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for party in clean_parties:\n",
+    "    \n",
+    "    data_words = tokenize(clean_data_frame, party)\n",
+    "    save_list(data_words, party)"
+   ]
   }
  ],
  "metadata": {
