Update and rename tokenize_text.ipynb to clean_interventions.ipynb

--- a/clean_interventions.ipynb
+++ b/clean_interventions.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nThis module takes the dataset and tokenizes the speech to prepare it for analysis.\\n'"
+       "'\\nThis module takes the dataset and prepares it for analysis through cleaning and removing out-of-scope speeches.\\n'"
       ]
      },
      "execution_count": 1,
@@ -478,73 +478,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d3d8860",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "id": "98eae0b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12410951\n"
-     ]
-    },
-  {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
-   "source": [
-    "compiled = []\n",
-    "\n",
-    "for lst in data_words:\n",
-    "    for i in lst:\n",
-    "        compiled.append(i)\n",
-    "\n",
-    "print(len(compiled))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a28ff4f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1145d915",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "id": "0e254cdc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for party in clean_parties:\n",
-    "    \n",
-    "    data_words = tokenize(clean_data_frame, party)\n",
-    "    save_list(data_words, party)"
-   ]
   }
  ],
  "metadata": {
