--- a/making_word_lists.ipynb
+++ b/making_word_lists.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nThis module conducts LDA on lists of words.\\n'"
+       "'\\nThis module tokenizes text and divides the dataset into specific categories (political parties and legislative sessions for further analysis"\\n'"
       ]
      },
      "execution_count": 2,
@@ -395,14 +395,6 @@
     "    data_words = tokenize(clean_dataframe, party=party)\n",
     "    save_list(data_words, party=party)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ace8455",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
