--- a/making_word_lists.ipynb
+++ b/making_word_lists.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nThis module tokenizes text and divides the dataset into specific categories, \(political parties and legislative sessions\) for further analysis."\\n'"
+       "'\\nThis module conducts LDA on lists of words.\\n'"
       ]
      },
      "execution_count": 2,
@@ -19,7 +19,7 @@
    ],
    "source": [
     "'''\n",
-    "This module tokenizes text and divides the dataset into specific categories \(political parties and legislative sessions\) for further analysis-\n",
+       "'\\nThis module conducts LDA on lists of words.\\n'"
     "'''"
    ]
   },
