--- a/making_word_lists.ipynb
+++ b/making_word_lists.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nThis module tokenizes text and divides the dataset into subcategories, political parties, for further analysis.\\n'"
+       "'\\nThis module conducts LDA on lists of words.\\n'"
       ]
      },
      "execution_count": 2,
@@ -19,7 +19,7 @@
    ],
    "source": [
     "'''\n",
-       "'\\nThis module tokenizes text and divides the dataset into subcategories, political parties, for further analysis.\\n'"
+    "This module conducts LDA on lists of words.\n",
     "'''"
    ]
   },
@@ -400,6 +400,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3ace8455",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a8b59ed",
    "metadata": {},
    "outputs": [],
    "source": []
