--- a/making_word_lists.ipynb
+++ b/making_word_lists.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nThis module conducts LDA on lists of words.\\n'"
+       "'\\nThis module tokenizes text and divides the dataset into categories for further analysis.\\n'"
       ]
      },
      "execution_count": 2,
@@ -19,7 +19,7 @@
    ],
    "source": [
     "'''\n",
-    "This module conducts LDA on lists of words.\n",
+    "This module tokenizes text and divides the dataset into categories for further analysis.\n",
     "'''"
    ]
   },
