--- a/making_word_lists.ipynb
+++ b/making_word_lists.ipynb
@@ -19,7 +19,7 @@
    ],
    "source": [
     "'''\n",
-    "This module tokenizes text and divides the dataset into categories for further analysis.\n",
+    "This module tokenizes text and divides the dataset into categories (political parties, legislative sessions) for further analysis.\n",
     "'''"
    ]
   },
