--- a/making_word_lists.ipynb
+++ b/making_word_lists.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nThis module tokenizes text and divides the dataset into categories for further analysis.\\n'"
+       "'\\nThis module tokenizes text and divides the dataset into categories (political parties, legislative sessions) for further analysis.\\n'"
       ]
      },
      "execution_count": 2,
